WIP Commands - Add day constraint on store schedules